<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/cancelBtn"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"
            android:text="CANCEL" />
        <Button
            android:id="@+id/saveBtn"
            android:layout_weight=".5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"
            android:text="SAVE" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trimLayout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            >

            <ToggleButton
                android:layout_marginTop="65dp"
                android:id="@+id/trimbutton"
                android:layout_width="140dp"
                android:layout_height="110dp"
                android:background="@drawable/check"
                android:drawableTop="@drawable/trimming"
                android:checked="false"
                android:paddingTop="7dp"
                android:textOff=""
                android:textOn=""/>

            <TextView
                android:id="@+id/textTrimming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trimming"
                android:layout_above="@+id/trimbutton"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGray"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plantsLayout"
            android:layout_marginLeft="30dp"
            >

            <ToggleButton
                android:layout_marginTop="65dp"
                android:id="@+id/plantsbutton"
                android:layout_width="140dp"
                android:layout_height="110dp"
                android:background="@drawable/check"
                android:drawableTop="@drawable/sprout"
                android:checked="false"
                android:paddingTop="7dp"
                android:textOff=""
                android:textOn=""/>

            <TextView
                android:id="@+id/textTrimming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plants"
                android:layout_above="@+id/plantsbutton"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGray"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weedLayout"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="180dp" >

            <ToggleButton
                android:layout_marginTop="65dp"
                android:id="@+id/weedbutton"
                android:layout_width="140dp"
                android:layout_height="110dp"
                android:background="@drawable/check"
                android:drawableTop="@drawable/lawn_mower"
                android:checked="false"
                android:textOff=""
                android:textOn=""/>

            <TextView
                android:id="@+id/weedTrimming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weedeater"
                android:layout_above="@+id/weedbutton"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGray"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mowLayout"
            android:layout_alignParentRight="true"
            android:layout_marginTop="180dp"
            android:layout_marginRight="30dp"
            >

            <ToggleButton
                android:layout_marginTop="65dp"
                android:id="@+id/mowbutton"
                android:layout_width="140dp"
                android:layout_height="110dp"
                android:background="@drawable/check"
                android:drawableTop="@drawable/mow"
                android:checked="false"
                android:paddingTop="7dp"
                android:textOff=""
                android:textOn=""/>

            <TextView
                android:id="@+id/textmow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mow"
                android:layout_above="@+id/mowbutton"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorGray"/>
        </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edgerLayout"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="360dp" >

                <ToggleButton
                    android:layout_marginTop="65dp"
                    android:id="@+id/edgerbutton"
                    android:layout_width="140dp"
                    android:layout_height="110dp"
                    android:background="@drawable/check"
                    android:drawableTop="@drawable/lawn_mower"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""/>

                <TextView
                    android:id="@+id/edgerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edger"
                    android:layout_above="@+id/edgerbutton"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorGray"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>